Fixed GallerySkeleton on tablet-media.

--- a/src/components/GallerySkeleton/styles.module.css
+++ b/src/components/GallerySkeleton/styles.module.css
@@ -54,14 +54,19 @@
   background-color: rgba(240, 240, 240, 0.8);
 }
 
-.item:nth-child(1),
-.item:nth-child(3) {
+.item:nth-child(2),
+.item:nth-child(4) {
   z-index: 2;
   transform: scale(0.8) translateX(-112%) translateY(-62%);
 }
 
-.item:nth-child(3) {
+.item:nth-child(4) {
   transform: scale(0.8) translateX(-13%) translateY(-62%);
+}
+
+.item:nth-child(1),
+.item:nth-child(5) {
+  display: none;
 }
 
 .controls {
@@ -83,7 +88,9 @@
 }
 
 .button:nth-child(1),
-.button:nth-child(4) {
+.button:nth-child(2),
+.button:nth-child(5),
+.button:nth-child(6) {
   display: none;
 }
 
@@ -106,18 +113,31 @@
     min-width: 330px;
   }
 
-  .item:nth-child(1),
-  .item:nth-child(3) {
+  .item:nth-child(2),
+  .item:nth-child(4) {
     z-index: 2;
     transform: scale(0.8) translateX(-124%) translateY(-62%);
   }
 
-  .item:nth-child(3) {
+  .item:nth-child(4) {
     transform: scale(0.8) translateX(0) translateY(-62%);
   }
 
+  .item:nth-child(1),
+  .item:nth-child(5) {
+    display: initial;
+    z-index: 1;
+    transform: scale(0.5) translateX(-279%) translateY(-100%);
+  }
+
+  .item:nth-child(5) {
+    transform: scale(0.5) translateX(79%) translateY(-100%);
+  }
+
   .button:nth-child(1),
-  .button:nth-child(4) {
+  .button:nth-child(2),
+  .button:nth-child(5),
+  .button:nth-child(6) {
     display: initial;
   }
 }
